Welcome to my Meow Meow

--- a/login.html
+++ b/login.html
@@ -8,14 +8,12 @@
   </head>
   <body>
     <h1>Login Page</h1>
-<<<<<<< HEAD
-=======
+    <<<<<<< HEAD =======
     <h2>Welcome to my website</h2>
     <h2>Welcome to my website1</h2>
-<<<<<<< HEAD
->>>>>>> feature-frontLogin
-=======
+    <<<<<<< HEAD >>>>>>> feature-frontLogin =======
     <h2>Welcome to my website2</h2>
->>>>>>> feature-frontLogin
+    <h2>Welcome to my Meow Meow</h2>
+    >>>>>>> feature-frontLogin
   </body>
 </html>
