--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
       <h1>
-        Learning Git Workflows
+        Ouga Ouga~
       </h1>
+      <h2>Bo Bo~</h2>
   </body>
 </html>
