--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-      <h1>
-        Learning Git Workflows
-      </h1>
+    <h1>Learning Git Workflows</h1>
+    <h2>chaninwit samaisongkongkeaw</h2>
+    <h3>age 28</h3>
   </body>
 </html>
