--- a/login.html
+++ b/login.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <h1>Login Page</h1>
-    <h2>Welcome to my website</h2>
-    <h2>Welcome to my website1</h2>
-    <h2>Welcome to my website2</h2>
-    <h2>Welcome to my Nattanicha</h2>
+
+    <span>Coffee Banana</span>
   </body>
 </html>
